--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,18 @@
     <title>Home</title>
 </head>
 <body>
-    <P>Hello {{request.user.username}}!</P>
-    <br><br>
+    <P>Hello 
+        {% if request.user.username %}
+        {{ request.user.username }}!
+        <br><br>
     
-    <a href="{% url 'logout' %}">Logout</a>
+        <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+        Guest!
+        <br><br>
+        <a href="{% url 'login' %}">Login</a>
+        {% endif %}
+        </P>
+    
 </body>
 </html>
